--- a/PyramidPanic/PyramidPanic/PyramidPanic/PyramidPanic.csproj
+++ b/PyramidPanic/PyramidPanic/PyramidPanic/PyramidPanic.csproj
@@ -17,7 +17,8 @@
     <XnaCrossPlatformGroupID>c35681bf-234a-41cd-ac16-3b567903c75e</XnaCrossPlatformGroupID>
     <XnaOutputType>Game</XnaOutputType>
     <ApplicationIcon>pyramid.ico</ApplicationIcon>
-    <Thumbnail>GameThumbnail.png</Thumbnail>
+    <Thumbnail>
+    </Thumbnail>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -108,11 +109,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Program.cs" />
-    <Compile Include="PyramidPanic.cs" />
+    <Compile Include="Game\Program.cs" />
+    <Compile Include="Game\PyramidPanic.cs" />
+    <Compile Include="GameScenes\StartScene\StartScene.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="GameThumbnail.png" />
     <Content Include="pyramid.ico" />
   </ItemGroup>
   <ItemGroup>
@@ -147,6 +148,11 @@
       <ProductName>Microsoft XNA Framework Redistributable 4.0</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="GameScenes\GameOverScene\" />
+    <Folder Include="GameScenes\HelpScene\" />
+    <Folder Include="GameScenes\PlayScene\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.targets" />
