--- a/PyramidPanic 9-12-13 V3/PyramidPanic/PyramidPanic/PyramidPanic.csproj
+++ b/PyramidPanic 9-12-13 V3/PyramidPanic/PyramidPanic/PyramidPanic.csproj
@@ -113,6 +113,7 @@
     <Compile Include="GameScenes\StartScene\PlayScene\PlayScene.cs" />
     <Compile Include="Game\IState.cs" />
     <Compile Include="HelperClass\Image.cs" />
+    <Compile Include="HelperClass\Menu.cs" />
     <Compile Include="Input\Input.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Game\Program.cs" />
