--- a/PyramidPanic 9-12-13 V3/PyramidPanic/PyramidPanic/PyramidPanic.csproj
+++ b/PyramidPanic 9-12-13 V3/PyramidPanic/PyramidPanic/PyramidPanic.csproj
@@ -110,7 +110,8 @@
   <ItemGroup>
     <Compile Include="GameScenes\GameOverScene\GameOverScene.cs" />
     <Compile Include="GameScenes\HelpScene\HelpScene.cs" />
-    <Compile Include="GameScenes\StartScene\PlayScene\PlayScene.cs" />
+    <Compile Include="GameScenes\LoadScene\LoadScene.cs" />
+    <Compile Include="GameScenes\PlayScene\PlayScene.cs" />
     <Compile Include="Game\IState.cs" />
     <Compile Include="HelperClass\Image.cs" />
     <Compile Include="HelperClass\Menu.cs" />
