--- a/PyramidPanic 16-12-2013 V4/PyramidPanic/PyramidPanic/PyramidPanic.csproj
+++ b/PyramidPanic 16-12-2013 V4/PyramidPanic/PyramidPanic/PyramidPanic.csproj
@@ -112,6 +112,8 @@
     <Compile Include="GameScenes\HelpScene\HelpScene.cs" />
     <Compile Include="GameScenes\LoadScene\LoadScene.cs" />
     <Compile Include="GameScenes\PlayScene\PlayScene.cs" />
+    <Compile Include="GameScenes\PlayScene\Scorpion\ScorpionClass.cs" />
+    <Compile Include="GameScenes\QuitScene\QuitScene.cs" />
     <Compile Include="GameScenes\ScoresScene\ScoresScene.cs" />
     <Compile Include="Game\IState.cs" />
     <Compile Include="HelperClass\Image.cs" />
