We hebben nu een beetle en een scorpion die heen en weer lopen op het scherm.

--- a/PyramidPanic 16-12-2013 V4/PyramidPanic/PyramidPanic/PyramidPanic.csproj
+++ b/PyramidPanic 16-12-2013 V4/PyramidPanic/PyramidPanic/PyramidPanic.csproj
@@ -108,9 +108,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GameScenes\AnimatedSprite\AnimatedSprite.cs" />
     <Compile Include="GameScenes\GameOverScene\GameOverScene.cs" />
     <Compile Include="GameScenes\HelpScene\HelpScene.cs" />
     <Compile Include="GameScenes\LoadScene\LoadScene.cs" />
+    <Compile Include="GameScenes\PlayScene\Beetle\Beetle.cs" />
+    <Compile Include="GameScenes\PlayScene\explorer\Explorer.cs" />
     <Compile Include="GameScenes\PlayScene\PlayScene.cs" />
     <Compile Include="GameScenes\PlayScene\Scorpion\ScorpionClass.cs" />
     <Compile Include="GameScenes\QuitScene\QuitScene.cs" />
