--- a/PyramidPanic 16-12-2013 V4/PyramidPanic/PyramidPanic/PyramidPanic.csproj
+++ b/PyramidPanic 16-12-2013 V4/PyramidPanic/PyramidPanic/PyramidPanic.csproj
@@ -109,13 +109,25 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GameScenes\AnimatedSprite\AnimatedSprite.cs" />
+    <Compile Include="GameScenes\AnimatedSprite\IAnimatedSprite.cs" />
     <Compile Include="GameScenes\GameOverScene\GameOverScene.cs" />
     <Compile Include="GameScenes\HelpScene\HelpScene.cs" />
-    <Compile Include="GameScenes\LoadScene\LoadScene.cs" />
+    <Compile Include="GameScenes\PlayScene\Beetle\LoadScene.cs" />
     <Compile Include="GameScenes\PlayScene\Beetle\Beetle.cs" />
+    <Compile Include="GameScenes\PlayScene\explorer\ExplorerWalkDown.cs" />
+    <Compile Include="GameScenes\PlayScene\explorer\ExplorerWalkLeft.cs" />
+    <Compile Include="GameScenes\PlayScene\explorer\ExplorerWalkUp.cs" />
+    <Compile Include="GameScenes\PlayScene\explorer\ExplorerIdle.cs" />
     <Compile Include="GameScenes\PlayScene\explorer\Explorer.cs" />
+    <Compile Include="GameScenes\PlayScene\explorer\ExplorerWalkRight.cs" />
+    <Compile Include="GameScenes\PlayScene\Scorpion\IScorpionState.cs" />
+    <Compile Include="GameScenes\PlayScene\Scorpion\WalkRight.cs" />
+    <Compile Include="GameScenes\PlayScene\Scorpion\WalkLeft.cs" />
+    <Compile Include="GameScenes\PlayScene\Beetle\WalkDown.cs" />
+    <Compile Include="GameScenes\PlayScene\Beetle\IBeetleState.cs" />
+    <Compile Include="GameScenes\PlayScene\Beetle\WalkUp.cs" />
     <Compile Include="GameScenes\PlayScene\PlayScene.cs" />
-    <Compile Include="GameScenes\PlayScene\Scorpion\ScorpionClass.cs" />
+    <Compile Include="GameScenes\PlayScene\Scorpion\Scorpion.cs" />
     <Compile Include="GameScenes\QuitScene\QuitScene.cs" />
     <Compile Include="GameScenes\ScoresScene\ScoresScene.cs" />
     <Compile Include="Game\IState.cs" />
@@ -163,7 +175,9 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="GameScenes\LoadScene\" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.targets" />
   <!--
